--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "couchdb-db-transform",
+  "name": "couchdb-transform",
   "version": "0.0.5",
   "description": "Fetches documents from one couchdb database, optionally transforms them and inserts them into target database",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "test": "grunt",
-    "tests-unit": "grunt"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -21,31 +19,17 @@
   "author": "Patrick Titzler <ptitzler@us.ibm.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "async": "^2.0.1",
-    "body-parser": "^1.15.2",
-    "cfenv": "^1.0.3",
-    "cloudant": "^1.4.3",
-    "debug": "^2.2.0",
-    "cf-deployment-tracker-client": "^0.x",
-    "events": "^1.1.1",
+    "@cloudant/cloudant": "*",
+    "async": "^2.6.1",
+    "atob": "^2.1.2",
+    "body-parser": "^1.18.3",
+    "debug": "^4.1.0",
+    "events": "^3.0.0",
+    "eventsource": "^1.0.7",
     "express": "^4.14.0",
     "fs": "0.0.2",
     "lodash": "^4.15.0",
-    "passport": "^0.3.2",
-    "passport-anonymous": "^1.0.1",
-    "passport-http": "^0.3.0",
     "path": "^0.12.7",
-    "redis": "^2.6.2",
-    "util": "^0.10.3"
-  },
-  "devDependencies": {
-    "assert": "^1.4.1",
-    "grunt": "0.4.5",
-    "grunt-cli": "0.1.13",
-    "grunt-contrib-jshint": "0.12.0",
-    "grunt-jscs": "2.8.0",
-    "grunt-simple-mocha": "^0.4.1",
-    "jshint": "2.8.0",
-    "mocha": "^3.0.2"
+    "util": "^0.11.1"
   }
 }
